.metadata/.plugins/org.eclipse.cdt.ui/LibTest.build.log
"C:/Users/Philipp/.arduinocdt/packages/arduino/tools/avr-gcc/4.9.2-atmel3.5.4-arduino2/bin/avr-g++" -c -g -Os -w -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -MMD -flto -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10608 -DARDUINO_AVR_NANO -DARDUINO_ARCH_AVR   -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/cores/arduino" -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/variants/eightanaloginputs" -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/libraries/EEPROM/src" -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/libraries/Wire/src" -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/libraries/SPI/src" -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/libraries/HID/src" -I"C:/Users/Philipp/.arduinocdt/packages/arduino/hardware/avr/1.6.21/libraries/SoftwareSerial/src" -I"C:/Users/Philipp/.arduinocdt/libraries/RF24/1.3.1" -I"C:/Users/Philipp/.arduinocdt/libraries/RF24/1.3.1/utility" "../../MyRC_Helper.cpp" -o "project/MyRC_Helper.cpp.o"
../../MyRC_Helper.cpp:4:6: error: redefinition of 'static void MyRC_Helper::printInputs(Button_Inputs)'
 void MyRC_Helper::printInputs(Button_Inputs values) {
      ^
In file included from ../../MyRC_Helper.cpp:2:0:
../../MyRC_Helper.h:24:18: note: 'static void MyRC_Helper::printInputs(Button_Inputs)' previously defined here
      static void printInputs(Button_Inputs values) {
                  ^
makefile:73: recipe for target 'project/MyRC_Helper.cpp.o' failed
make: *** [project/MyRC_Helper.cpp.o] Error 1
